--- a/Epsilon.csproj
+++ b/Epsilon.csproj
@@ -17,8 +17,8 @@
         <Profile>VMware</Profile>
         <Description>Use VMware Player or Workstation to deploy and debug.</Description>
         <PxeInterface>192.168.0.8</PxeInterface>
-        <CompressionType>None</CompressionType>
         <VMWareEdition>Workstation</VMWareEdition>
+        <DebugEnabled>False</DebugEnabled>
     </PropertyGroup>
 
     <ItemGroup>
