--- a/Epsilon.csproj
+++ b/Epsilon.csproj
@@ -20,8 +20,11 @@
         <VMWareEdition>Workstation</VMWareEdition>
         <DebugEnabled>False</DebugEnabled>
         <RemoveBootDebugOutput>True</RemoveBootDebugOutput>
-        <CompressionType>Gzip</CompressionType>
-        <UseUEFI>True</UseUEFI>
+        <CompressionType>None</CompressionType>
+        <UseUEFI>False</UseUEFI>
+        <CompileVBEMultiboot>True</CompileVBEMultiboot>
+        <OptimizationLevel>1</OptimizationLevel>
+        <VBEResolution>640x480x32</VBEResolution>
     </PropertyGroup>
 
     <ItemGroup>
