--- a/Epsilon.csproj
+++ b/Epsilon.csproj
@@ -44,6 +44,10 @@
       <None Remove="System\Resources\Fonts\arial.ttf" />
       <None Remove="System\Resources\Fonts\ter-powerline-v16n.psf" />
       <None Remove="System\Resources\Fonts\zap-ext-light16.psf" />
+      <None Remove="System\Resources\Images\Bar.bmp" />
+      <None Remove="System\Resources\Images\Buttons_o\CB_click.bmp" />
+      <None Remove="System\Resources\Images\Buttons_o\CB_hover.bmp" />
+      <None Remove="System\Resources\Images\Buttons_o\CB_idle.bmp" />
       <None Remove="System\Resources\Images\Buttons\CB_click.bmp" />
       <None Remove="System\Resources\Images\Buttons\CB_hover.bmp" />
       <None Remove="System\Resources\Images\Buttons\CB_idle.bmp" />
@@ -54,11 +58,22 @@
       <None Remove="System\Resources\Images\MenuBanner.bmp" />
       <None Remove="System\Resources\Images\Profile\Default.bmp" />
       <None Remove="System\Resources\Images\Setup.bmp" />
+      <None Remove="System\Resources\Images\TBar.bmp" />
       <None Remove="System\Resources\Images\TEPBanner.bmp" />
       <None Remove="System\Resources\Images\Wallpapers\1024x768.bmp" />
       <None Remove="System\Resources\Images\Wallpapers\640x480.bmp" />
+      <None Remove="System\Resources\Images\Wallpapers\Alpha-2.bmp" />
       <None Remove="System\Resources\Images\Wallpapers\Alpha.bmp" />
       <None Remove="System\Resources\Images\Wallpapers\Default.bmp" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Include="System\Resources\Images\Buttons_o\CB_click.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="System\Resources\Images\Buttons_o\CB_hover.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
 
     <ItemGroup>
@@ -86,6 +101,9 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="System\Resources\Fonts\zap-ext-light16.psf">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="System\Resources\Images\Buttons_o\CB_idle.bmp">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="System\Resources\Images\Buttons\CB_click.bmp">
@@ -125,6 +143,9 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="System\Resources\Images\Wallpapers\640x480.bmp">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </EmbeddedResource>
+      <EmbeddedResource Include="System\Resources\Images\Wallpapers\Alpha-2.bmp">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </EmbeddedResource>
       <EmbeddedResource Include="System\Resources\Images\Wallpapers\Alpha.bmp">
